--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          generate_release_notes
+          generate_release_notes: true
